# Zook-Network

./: Cargo.toml  Clarinet.toml  Comprehensive_testnet_script.py  Production_deployment.md  README.md  cli.rs  comprehensive_zook_btcz_testnet_windows.py  config.toml  deploy.md  dockerfile  interaction.rs  readme.md  setup_testnet.py  testnet.env  zook_testnet_setup.py
Clarity/: bridge.clar  governance.clar  interaction.rs  zbtcz.clar
clarity_contracts/: readme.md
clarity_contracts/bridge/: aggregate_bridge.clar  readme.md
clarity_contracts/governance/: readme.md  validator_rewards.clar
clarity_contracts/tokens/: readme.md  zbtcz.clar  zbtcz_smart_contract.clar
contracts/: governance.clar
scripts/: Zook_Network_Setup.sh  Zook_Network_Testing.sh  deploy.sh  deploy_clarity.sh  deploy_clarity_contracts.sh  deploy_runtime.sh  pre_production_checklist.sh  readme.md
src/: clarity.rs  errors.rs  governance_scalability.rs  ledger.rs  main.rs  models.rs  readme.md
src/api/: anchoring_api.rs  bridge.rs  bridge_api.rs  bridge_finalize.rs  governance_api.rs  mod.rs  router.rs  security.rs  validator_api.rs  validator_rewards_api.rs
src/auth/: security.rs  security_tests.rs
src/bridge/: api.rs  bridge_finalization.rs  bridge_logic.rs  bridge_operations.rs  btcz_integration.rs  cross_layer_sync.rs  event_sync.rs  merkle.rs  mod.rs  state_anchoring.rs  validator.rs
src/governance/: api.rs  cross_layer_governance.rs  docker-compose.yml  dockerfile  mod.rs  rewards.rs  token.rs  validator_policies.rs  validator_policy_api.rs  validator_rewards.rs  (+2 more)
src/rpc/: server.rs
(+23 files in other folders)
