[package]
name = "zook-network"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Zook Network - A Layer 2 solution for BitcoinZ with governance, bridge, and validator functionality."
license = "MIT"
repository = "https://github.com/jeelybeely/zook-network"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
parking_lot = "0.11"

[dependencies.clarity-cli]
version = "0.1"
path = "../stacks-core/clarity-cli"

[features]
default = []
