[package]
name = "zook-network"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
rust-crypto = "0.2"
futures = "0.3"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
assert-json-diff = "1.0"

[features]
default = ["std"]
std = []


[workspace]
members = []
